docs: change foote in pages
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -78,9 +78,9 @@
   <footer class="inner">
     {% if site.github.is_project_page %}
     <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a
-      href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+      href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a> | for any questions please contact me via <a href="mailto:songbook@fusakla.cz">songbook@fusakla.cz</a></p>
     {% endif %}
-    <p><a href="/terms_of_service.html">Terms of use</a> | <a href="/terms_of_service.html">Privacy policy</a> </p>
+    <p><a href="/terms_of_service.html">Terms of use</a> | <a href="/terms_of_service.html">Privacy policy</a></p>
   </footer>
 </div>
 
