docs: fix screenshot CSS styles
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -45,7 +45,7 @@ img[alt="FUSAKLA"] {
   width: 70px;
 }
 
-img[alt="screenshot"] {
+img[alt="Screenshot of Songbook add-on"] {
   display: block;
   margin-left: auto;
   margin-right: auto;
